DTGB-728: Fixed input font-size on mobile.

--- a/components/11-base/forms/_forms.scss
+++ b/components/11-base/forms/_forms.scss
@@ -165,13 +165,9 @@ $field-icon-padding: 2.5rem;
   border: 1px solid;
   border-radius: border-radius("radius-1");
   font-family: $default-font-family;
-  font-size: .8rem;
+  font-size: .7rem;
   font-weight: normal;
   appearance: none;
-
-  @include tablet {
-    font-size: .7rem;
-  }
 }
 
 ///
